# efsim

./: .gitignore  CMakeLists.txt  README.md
input_files/: 8cellmodel.vtk  grid_four_cells_distorted.ucd  input_efsim.prm  input_spsim.prm
output/: README
programs/: efsim.cc  run_convergence_test.cc  run_convergence_test_parabolic.cc  spsim.cc
source/: BitMapFunction.h  CoupledFlowTransport.h  DirichletFluxRecovery.h  EllipticPressureSolver.h  EmbeddedSurface.h  HelpFunctions.h  InterfaceView.h  ParabolicPressureSolver.h  ParameterHandlerFunctions.h  PostProcess.h  PostProcessGS.h  PostProcessMM.h  PressureSolverBase.h  ProblemFunctions.h  RockProperties.h  TransportSolver.h  VTKReader.h  Velocity.h  la_config.h
tests/: test_dirichlet_flux_recovery.cc  test_elliptic_solver.cc  test_embedded_surface.cc  test_parabolic_solver.cc  test_postprocessMM.cc  test_residual.cc  test_rock_prop.cc  test_transport.cc  test_vtk_reader.cc
